--- a/index.html
+++ b/index.html
@@ -57,23 +57,25 @@
             </div>
 
             <div class="body">
-                <p>
-                    <strong>L’autre Terre Libérée</strong> est une joyeuse association citoyenne qui a pour vocation de valoriser l’histoire passée d’une expérience communautaire, végétarienne et anarchiste réalisée sur territoire luynois (37) entre 1923 et 1949. L’expérience, dont la mémoire locale
-                    a fait table rase, était une école de pratique végétalienne, elle se nommait <strong>Terre Libérée</strong> et son initiateur, ci-dessus à droite du globe terrestre, se nommait <strong>Louis Rimbault</strong>.
-                </p>
-                <p>
-                    Au-delà d’un devoir de mémoire, l’association a pour vocation d’organiser des moments de partage et de convivialité, de promouvoir la transition écologique et le vivre ensemble, le tout dans une démarche coopérative. L’essence même de cette initiative locale réside dans la
-                    volonté de créer du lien et vient questionner le sens de “faire communauté” aujourd’hui.
-                </p>
-                <p>
-                    L’expérience communautaire <strong>Terre Libérée</strong> s’est déroulée sur les hauteurs de Luynes, rue des pins. La ferme est encore visible mais appartient à des privés. Une parcelle de 2500m2, jouxtant l’expérience a été donnée en gestion à l’association. Sur cette prairie
-                    boisée, l’association a pour objectif de laisser en permanence un jardin offert aux promeneurs.
-                </p>
-                <p>
-                    Dans cet espace en accès libre, l’association raconte sur des ardoises gravées ce morceau de patrimoine disparu des mémoires collectives. Ce jardin se trouvant sur un parcours de promenade, du mobilier de plein air va être réalisé par les membres de l’association (en cours de
-                    réalisation) et proposé aux promeneurs afin qu’ils puissent s’y arrêter faire un pique nique. Nous prévoyons une promenade identifiée (en accord avec la mairie) depuis les halles de Luynes.
-                </p>
-                <p>C’est dans ce cadre que les adhérents de L’autre terre libérée ont décidé d’organiser le premier événement de l’association le <strong>mardi 27 juin</strong> et le <strong>dimanche 2 juillet 2023</strong> sur la commune de Luynes.</p>
+                <div class="inner">
+                    <p>
+                        <strong>L’autre Terre Libérée</strong> est une joyeuse association citoyenne qui a pour vocation de valoriser l’histoire passée d’une expérience communautaire, végétarienne et anarchiste réalisée sur territoire luynois (37) entre 1923 et 1949. L’expérience, dont la mémoire
+                        locale a fait table rase, était une école de pratique végétalienne, elle se nommait <strong>Terre Libérée</strong> et son initiateur, ci-dessus à droite du globe terrestre, se nommait <strong>Louis Rimbault</strong>.
+                    </p>
+                    <p>
+                        Au-delà d’un devoir de mémoire, l’association a pour vocation d’organiser des moments de partage et de convivialité, de promouvoir la transition écologique et le vivre ensemble, le tout dans une démarche coopérative. L’essence même de cette initiative locale réside dans la
+                        volonté de créer du lien et vient questionner le sens de “faire communauté” aujourd’hui.
+                    </p>
+                    <p>
+                        L’expérience communautaire <strong>Terre Libérée</strong> s’est déroulée sur les hauteurs de Luynes, rue des pins. La ferme est encore visible mais appartient à des privés. Une parcelle de 2500m2, jouxtant l’expérience a été donnée en gestion à l’association. Sur cette
+                        prairie boisée, l’association a pour objectif de laisser en permanence un jardin offert aux promeneurs.
+                    </p>
+                    <p>
+                        Dans cet espace en accès libre, l’association raconte sur des ardoises gravées ce morceau de patrimoine disparu des mémoires collectives. Ce jardin se trouvant sur un parcours de promenade, du mobilier de plein air va être réalisé par les membres de l’association (en cours de
+                        réalisation) et proposé aux promeneurs afin qu’ils puissent s’y arrêter faire un pique nique. Nous prévoyons une promenade identifiée (en accord avec la mairie) depuis les halles de Luynes.
+                    </p>
+                    <p>C’est dans ce cadre que les adhérents de L’autre terre libérée ont décidé d’organiser le premier événement de l’association le <strong>mardi 27 juin</strong> et le <strong>dimanche 2 juillet 2023</strong> sur la commune de Luynes.</p>
+                </div>
             </div>
             <div class="img-footer text-center">
                 <img src="images/logo-small.png" />
