changement typo, ajout affiche

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet" />
 
         <link rel="stylesheet" href="css/normalize.css" />
+        <link rel="stylesheet" href="fonts/frankie/stylesheet.css" />
         <link rel="stylesheet" href="css/style.css" />
 
         <link rel="manifest" href="site.webmanifest" />
@@ -32,12 +32,11 @@
                 <img src="images/rimbault-transparent.png" />
             </div>
             <h1 class="text-center">L'autre terre libérée</h1>
-            <h2 class="text-center">Champ libre, une autre histoire luynoise</h2>
             <div class="events">
                 <div class="event text-center">
                     <div class="date">27 juin 2023</div>
                     <div class="description">
-                        <p>Conférence d'<a href="https://fr.wikipedia.org/wiki/Anne_Steiner" target="_blank">Anne Steiner</a>, spécialiste du <a href="https://fr.wikipedia.org/wiki/Anarchisme_individualiste">mouvement individualiste anarchiste</a></p>
+                        <p>Conférence d'<a href="https://fr.wikipedia.org/wiki/Anne_Steiner" target="_blank">Anne Steiner</a>, spécialiste du <a href="https://fr.wikipedia.org/wiki/Anarchisme_individualiste" target="_blank">mouvement individualiste anarchiste</a></p>
                         <p>(en partenariat avec le <a href="https://rdv-histoire.com" target="_blank">Centre Européen de la Promotion de l'Histoire</a>)</p>
                     </div>
                     <div class="lieu">
@@ -51,16 +50,21 @@
                         <p>Concert de la chorale féministe <a href="https://www.facebook.com/Martineetsescopines/" target="_blank">Martine et ses copines</a></p>
                     </div>
                     <div class="lieu">
-                        <p><a href="https://www.openstreetmap.org/?mlat=47.39772&mlon=0.53513#map=18/47.39772/0.53513" target="_blank">L'autre terre libérée</a></p>
+                        <p><a href="https://www.openstreetmap.org/?mlat=47.39772&mlon=0.53513#map=18/47.39772/0.53513" target="_blank">Terrain L'autre terre libérée</a></p>
                     </div>
                 </div>
+            </div>
+
+            <div class="affiche-wrapper text-center">
+                <a href="images/CREA AFFICHE V2.pdf" target="_blank"><img src="images/affiche.png" class="affiche" /></a>
             </div>
 
             <div class="body">
                 <div class="inner">
                     <p>
-                        <strong>L’autre Terre Libérée</strong> est une joyeuse association citoyenne qui a pour vocation de valoriser l’histoire passée d’une expérience communautaire, végétarienne et anarchiste réalisée sur territoire luynois (37) entre 1923 et 1949. L’expérience, dont la mémoire
-                        locale a fait table rase, était une école de pratique végétalienne, elle se nommait <strong>Terre Libérée</strong> et son initiateur, ci-dessus à droite du globe terrestre, se nommait <strong>Louis Rimbault</strong>.
+                        <strong>L’Autre Terre Libérée</strong> est une joyeuse association citoyenne qui a pour vocation de valoriser l’histoire passée d’une expérience communautaire, végétarienne et anarchiste réalisée sur territoire luynois (37) entre 1923 et 1949. L’expérience, dont la mémoire
+                        locale a fait table rase, était une école de pratique végétalienne, elle se nommait <strong>Terre Libérée</strong> et son initiateur se nommait <a href="https://fr.wikipedia.org/wiki/Louis_Rimbault" target="_blank"><strong>Louis Rimbault</strong></a
+                        >.
                     </p>
                     <p>
                         Au-delà d’un devoir de mémoire, l’association a pour vocation d’organiser des moments de partage et de convivialité, de promouvoir la transition écologique et le vivre ensemble, le tout dans une démarche coopérative. L’essence même de cette initiative locale réside dans la
@@ -78,6 +82,7 @@
                 </div>
             </div>
             <div class="img-footer text-center">
+                <img src="images/rimbault-transparent.png" />
                 <img src="images/logo-small.png" />
             </div>
         </div>
