--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                     <div class="date">27 juin 2023</div>
                     <div class="description">
                         <p>Conférence d'<a href="https://fr.wikipedia.org/wiki/Anne_Steiner" target="_blank">Anne Steiner</a>, spécialiste du <a href="https://fr.wikipedia.org/wiki/Anarchisme_individualiste" target="_blank">mouvement individualiste anarchiste</a></p>
-                        <p>(en partenariat avec le <a href="https://rdv-histoire.com" target="_blank">Centre Européen de la Promotion de l'Histoire</a>)</p>
+                        <p>en partenariat avec le <a href="https://rdv-histoire.com" target="_blank">Centre Européen de la Promotion de l'Histoire</a></p>
+                        <p>dans le cadre des <a href="https://cafeshistoriques.com/" target="_blank">Cafés historiques en région Centre-Val de Loire</a></p>
                     </div>
                     <div class="lieu">
                         <p><a href="https://www.openstreetmap.org/?mlat=47.38562&mlon=0.55435#map=19/47.38562/0.55435" target="_blank">Halle de Luynes</a></p>
@@ -50,7 +51,7 @@
                         <p>Concert de la chorale féministe <a href="https://www.facebook.com/Martineetsescopines/" target="_blank">Martine et ses copines</a></p>
                     </div>
                     <div class="lieu">
-                        <p><a href="https://www.openstreetmap.org/?mlat=47.39772&mlon=0.53513#map=18/47.39772/0.53513" target="_blank">Terrain L'autre terre libérée</a></p>
+                        <p><a href="https://www.openstreetmap.org/?mlat=47.39772&mlon=0.53513#map=18/47.39772/0.53513" target="_blank">Terrain l'autre terre libérée</a></p>
                     </div>
                 </div>
             </div>
