ajout page mentions legales

--- a/index.html
+++ b/index.html
@@ -82,9 +82,12 @@
                     <p>C’est dans ce cadre que les adhérents de L’autre terre libérée ont décidé d’organiser le premier événement de l’association le <strong>mardi 27 juin</strong> et le <strong>dimanche 2 juillet 2023</strong> sur la commune de Luynes.</p>
                 </div>
             </div>
-            <div class="img-footer text-center">
+            <div class="footer text-center">
                 <img src="images/rimbault-transparent.png" />
                 <img src="images/logo-small.png" />
+            </div>
+            <div class="liens">
+                <a href="mentions-legales.html">Mentions légales</a>
             </div>
         </div>
     </body>
