--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>L'autre terre libérée</title>
-        <meta name="description" content="L'autre terre libérée, une histoire anarchiste luynoise autour de Louis Rimbault" />
+        <meta name="description" content="L'autre terre libérée, une histoire anarchiste luynoise autour de la figure de Louis Rimbault." />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
         <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png" />
@@ -47,8 +47,9 @@
                 <div class="event text-center">
                     <div class="date">2 juillet 2023</div>
                     <div class="description">
-                        <p>Randonnée sonore, journée ludique, champêtre et musicale</p>
-                        <p>Concert de la chorale féministe <a href="https://www.facebook.com/Martineetsescopines/" target="_blank">Martine et ses copines</a></p>
+                        <p>Champs Libres, à la découverte de Terre Libérée</p>
+                        <p>Balade sonore — Pique-nique partagé — Fresque du climat</p>
+                        <p>Ateliers ludiques — Causerie en plein air — Chants</p>
                     </div>
                     <div class="lieu">
                         <p><a href="https://www.openstreetmap.org/?mlat=47.39772&mlon=0.53513#map=18/47.39772/0.53513" target="_blank">Terrain l'autre terre libérée</a></p>
@@ -57,15 +58,16 @@
             </div>
 
             <div class="affiche-wrapper text-center">
-                <a href="images/CREA AFFICHE V2.pdf" target="_blank"><img src="images/affiche.png" class="affiche" /></a>
+                <a href="images/affiche.pdf" target="_blank">
+                    <img src="images/affiche.png" class="affiche" alt="Affiche de l'événement Champ Libre à Luynes"/>
+                </a>
             </div>
 
             <div class="body">
                 <div class="inner">
                     <p>
                         <strong>L’Autre Terre Libérée</strong> est une joyeuse association citoyenne qui a pour vocation de valoriser l’histoire passée d’une expérience communautaire, végétarienne et anarchiste réalisée sur territoire luynois (37) entre 1923 et 1949. L’expérience, dont la mémoire
-                        locale a fait table rase, était une école de pratique végétalienne, elle se nommait <strong>Terre Libérée</strong> et son initiateur se nommait <a href="https://fr.wikipedia.org/wiki/Louis_Rimbault" target="_blank"><strong>Louis Rimbault</strong></a
-                        >.
+                        locale a fait table rase, était une école de pratique végétalienne, elle se nommait <strong>Terre Libérée</strong> et son initiateur se nommait <a href="https://fr.wikipedia.org/wiki/Louis_Rimbault" target="_blank"><strong>Louis Rimbault</strong></a>.
                     </p>
                     <p>
                         Au-delà d’un devoir de mémoire, l’association a pour vocation d’organiser des moments de partage et de convivialité, de promouvoir la transition écologique et le vivre ensemble, le tout dans une démarche coopérative. L’essence même de cette initiative locale réside dans la
@@ -83,8 +85,8 @@
                 </div>
             </div>
             <div class="footer text-center">
-                <img src="images/rimbault-transparent.png" />
-                <img src="images/logo-small.png" />
+                <img src="images/rimbault-transparent.png" alt="Portrait pochoir de Louis Rimbault"/>
+                <img src="images/logo-small.png" alt="Logo de l'association L'autre terre libérée à Luynes"/>
             </div>
             <div class="liens">
                 <a href="mentions-legales.html">Mentions légales</a>
