--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
                         <p>dans le cadre des <a href="https://cafeshistoriques.com/" target="_blank">Cafés historiques en région Centre-Val de Loire</a></p>
                     </div>
                     <div class="lieu">
-                        <p><a href="https://www.openstreetmap.org/?mlat=47.38562&mlon=0.55435#map=19/47.38562/0.55435" target="_blank">Halle de Luynes</a></p>
+                        <p><a href="https://www.openstreetmap.org/?mlat=47.38562&mlon=0.55435#map=19/47.38562/0.55435" target="_blank">Halles de Luynes</a></p>
                     </div>
                 </div>
                 <div class="event text-center">
                     <div class="date">2 juillet 2023</div>
                     <div class="description">
-                        <p>Champs Libres, à la découverte de Terre Libérée</p>
+                        <p>Champ Libre, à la découverte de Terre Libérée</p>
                         <p>Balade sonore — Pique-nique partagé — Fresque du climat</p>
                         <p>Ateliers ludiques — Causerie en plein air — Chants</p>
                     </div>
