--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
         <link rel="stylesheet" href="css/normalize.css" />
         <link rel="stylesheet" href="fonts/frankie/stylesheet.css" />
@@ -29,7 +30,7 @@
     <body>
         <div class="container">
             <div class="img-header text-center">
-                <img src="images/rimbault-transparent.png" />
+                <img src="images/rimbault-transparent.png" alt="Portrait de Louis Rimbault"/>
             </div>
             <h1 class="text-center">L'autre terre libérée</h1>
             <div class="events">
