--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
             <h1 class="text-center">L'autre terre libérée</h1>
             <div class="events">
                 <div class="event text-center">
-                    <div class="date">27 juin 2023</div>
+                    <div class="date">27 juin 2023 — 19h</div>
                     <div class="description">
-                        <p>Conférence d'<a href="https://fr.wikipedia.org/wiki/Anne_Steiner" target="_blank">Anne Steiner</a>, spécialiste du <a href="https://fr.wikipedia.org/wiki/Anarchisme_individualiste" target="_blank">mouvement individualiste anarchiste</a></p>
+                        <p>
+                            <a href="https://cafeshistoriques.com/programme/la-rencontre-de-louis-rimbault-et-des-causeries-anarchistes" target="_blank">A la rencontre de Louis Rimbault</a>, Conférence d'Anne Steiner, spécialiste du mouvement individualiste anarchiste
+                        </p>
                         <p>en partenariat avec le <a href="https://rdv-histoire.com" target="_blank">Centre Européen de la Promotion de l'Histoire</a></p>
                         <p>dans le cadre des <a href="https://cafeshistoriques.com/" target="_blank">Cafés historiques en région Centre-Val de Loire</a></p>
                     </div>
@@ -48,9 +50,9 @@
                 <div class="event text-center">
                     <div class="date">2 juillet 2023</div>
                     <div class="description">
-                        <p>Champs Libres, à la découverte de Terre Libérée</p>
-                        <p>Balade sonore — Pique-nique partagé — Fresque du climat</p>
-                        <p>Ateliers ludiques — Causerie en plein air — Chants</p>
+                        <p>Champ Libres, à la découverte de Terre Libérée</p>
+                        <p>Balade sonore — Pique-nique partagé</p>
+                        <p>Fresque du climat — Causeries en plein air</p>
                     </div>
                     <div class="lieu">
                         <p><a href="https://www.openstreetmap.org/?mlat=47.39772&mlon=0.53513#map=18/47.39772/0.53513" target="_blank">Terrain l'autre terre libérée</a></p>
