Remise en place lien wiki Anne Steiner

--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
                     <div class="date">27 juin 2023 — 19h</div>
                     <div class="description">
                         <p>
-                            <a href="https://cafeshistoriques.com/programme/la-rencontre-de-louis-rimbault-et-des-causeries-anarchistes" target="_blank">A la rencontre de Louis Rimbault</a>, Conférence d'Anne Steiner, spécialiste du mouvement individualiste anarchiste
+                            <a href="https://cafeshistoriques.com/programme/la-rencontre-de-louis-rimbault-et-des-causeries-anarchistes" target="_blank">A la rencontre de Louis Rimbault</a>
                         </p>
+                        <p>Conférence d'<a href="https://fr.wikipedia.org/wiki/Anne_Steiner" target="_blank">Anne Steiner</a>, sociologue, spécialiste du mouvement individualiste anarchiste</p>
                         <p>en partenariat avec le <a href="https://rdv-histoire.com" target="_blank">Centre Européen de la Promotion de l'Histoire</a></p>
                         <p>dans le cadre des <a href="https://cafeshistoriques.com/" target="_blank">Cafés historiques en région Centre-Val de Loire</a></p>
                     </div>
