Update affiche avec version sans texte dans la page

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <p>dans le cadre des <a href="https://cafeshistoriques.com/" target="_blank">Cafés historiques en région Centre-Val de Loire</a></p>
                     </div>
                     <div class="lieu">
-                        <p><a href="https://www.openstreetmap.org/?mlat=47.38562&mlon=0.55435#map=19/47.38562/0.55435" target="_blank">Halle de Luynes</a></p>
+                        <p><a href="https://www.openstreetmap.org/?mlat=47.38562&mlon=0.55435#map=19/47.38562/0.55435" target="_blank">Halles de Luynes</a></p>
                     </div>
                 </div>
                 <div class="event text-center">
@@ -63,7 +63,7 @@
 
             <div class="affiche-wrapper text-center">
                 <a href="images/affiche.pdf" target="_blank">
-                    <img src="images/affiche.png" class="affiche" alt="Affiche de l'événement Champ Libre à Luynes"/>
+                    <img src="images/affiche-sanstexte.png" class="affiche" alt="Affiche de l'événement Champ Libre à Luynes"/>
                 </a>
             </div>
 
