--- a/index.html
+++ b/index.html
@@ -1,100 +1,32 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
     <head>
         <meta charset="utf-8" />
         <title>L'autre terre libérée</title>
         <meta name="description" content="L'autre terre libérée, une histoire anarchiste luynoise autour de la figure de Louis Rimbault." />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png" />
-        <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png" />
-        <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png" />
-        <link rel="manifest" href="favicons/site.webmanifest" />
-        <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#5bbad5" />
+        <link rel="apple-touch-icon" sizes="180x180" href="src/assets/favicons/apple-touch-icon.png" />
+        <link rel="icon" type="image/png" sizes="32x32" href="src/assets/favicons/favicon-32x32.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="src/assets/favicons/favicon-16x16.png" />
+        <link rel="manifest" href="src/assets/favicons/site.webmanifest" />
+        <link rel="mask-icon" href="src/assets/favicons/safari-pinned-tab.svg" color="#5bbad5" />
         <meta name="msapplication-TileColor" content="#da532c" />
         <meta name="theme-color" content="#ffffff" />
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet" />
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
 
-        <link rel="stylesheet" href="css/normalize.css" />
-        <link rel="stylesheet" href="fonts/frankie/stylesheet.css" />
-        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="src/assets/css/normalize.css" />
+        <link rel="stylesheet" href="src/assets/frankie/stylesheet.css" />
 
-        <link rel="manifest" href="site.webmanifest" />
+        <link rel="manifest" href="src/assets/favicons/site.webmanifest" />
         <meta name="theme-color" content="#fafafa" />
     </head>
-
     <body>
-        <div class="container">
-            <div class="img-header text-center">
-                <img src="images/rimbault-transparent.png" alt="Portrait de Louis Rimbault"/>
-            </div>
-            <h1 class="text-center">L'autre terre libérée</h1>
-            <div class="events">
-                <div class="event text-center">
-                    <div class="date">27 juin 2023 — 19h</div>
-                    <div class="description">
-                        <p>
-                            <a href="https://cafeshistoriques.com/programme/la-rencontre-de-louis-rimbault-et-des-causeries-anarchistes" target="_blank">A la rencontre de Louis Rimbault</a>
-                        </p>
-                        <p>Conférence d'<a href="https://fr.wikipedia.org/wiki/Anne_Steiner" target="_blank">Anne Steiner</a>, sociologue, spécialiste du mouvement individualiste anarchiste</p>
-                        <p>en partenariat avec le <a href="https://rdv-histoire.com" target="_blank">Centre Européen de la Promotion de l'Histoire</a></p>
-                        <p>dans le cadre des <a href="https://cafeshistoriques.com/" target="_blank">Cafés historiques en région Centre-Val de Loire</a></p>
-                    </div>
-                    <div class="lieu">
-                        <p><a href="https://www.openstreetmap.org/?mlat=47.38562&mlon=0.55435#map=19/47.38562/0.55435" target="_blank">Halles de Luynes</a></p>
-                    </div>
-                </div>
-                <div class="event text-center">
-                    <div class="date">2 juillet 2023</div>
-                    <div class="description">
-                        <p>Champ Libres, à la découverte de Terre Libérée</p>
-                        <p>Balade sonore — Pique-nique partagé</p>
-                        <p>Fresque du climat — Causeries en plein air</p>
-                    </div>
-                    <div class="lieu">
-                        <p><a href="https://www.openstreetmap.org/?mlat=47.39772&mlon=0.53513#map=18/47.39772/0.53513" target="_blank">Terrain l'autre terre libérée</a></p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="affiche-wrapper text-center">
-                <a href="images/affiche.pdf" target="_blank">
-                    <img src="images/affiche-sanstexte.png" class="affiche" alt="Affiche de l'événement Champ Libre à Luynes"/>
-                </a>
-            </div>
-
-            <div class="body">
-                <div class="inner">
-                    <p>
-                        <strong>L’Autre Terre Libérée</strong> est une joyeuse association citoyenne qui a pour vocation de valoriser l’histoire passée d’une expérience communautaire, végétarienne et anarchiste réalisée sur territoire luynois (37) entre 1923 et 1949. L’expérience, dont la mémoire
-                        locale a fait table rase, était une école de pratique végétalienne, elle se nommait <strong>Terre Libérée</strong> et son initiateur se nommait <a href="https://fr.wikipedia.org/wiki/Louis_Rimbault" target="_blank"><strong>Louis Rimbault</strong></a>.
-                    </p>
-                    <p>
-                        Au-delà d’un devoir de mémoire, l’association a pour vocation d’organiser des moments de partage et de convivialité, de promouvoir la transition écologique et le vivre ensemble, le tout dans une démarche coopérative. L’essence même de cette initiative locale réside dans la
-                        volonté de créer du lien et vient questionner le sens de “faire communauté” aujourd’hui.
-                    </p>
-                    <p>
-                        L’expérience communautaire <strong>Terre Libérée</strong> s’est déroulée sur les hauteurs de Luynes, rue des pins. La ferme est encore visible mais appartient à des privés. Une parcelle de 2500m2, jouxtant l’expérience a été donnée en gestion à l’association. Sur cette
-                        prairie boisée, l’association a pour objectif de laisser en permanence un jardin offert aux promeneurs.
-                    </p>
-                    <p>
-                        Dans cet espace en accès libre, l’association raconte sur des ardoises gravées ce morceau de patrimoine disparu des mémoires collectives. Ce jardin se trouvant sur un parcours de promenade, du mobilier de plein air va être réalisé par les membres de l’association (en cours de
-                        réalisation) et proposé aux promeneurs afin qu’ils puissent s’y arrêter faire un pique nique. Nous prévoyons une promenade identifiée (en accord avec la mairie) depuis les halles de Luynes.
-                    </p>
-                    <p>C’est dans ce cadre que les adhérents de L’autre terre libérée ont décidé d’organiser le premier événement de l’association le <strong>mardi 27 juin</strong> et le <strong>dimanche 2 juillet 2023</strong> sur la commune de Luynes.</p>
-                </div>
-            </div>
-            <div class="footer text-center">
-                <img src="images/rimbault-transparent.png" alt="Portrait pochoir de Louis Rimbault"/>
-                <img src="images/logo-small.png" alt="Logo de l'association L'autre terre libérée à Luynes"/>
-            </div>
-            <div class="liens">
-                <a href="mentions-legales.html">Mentions légales</a>
-            </div>
-        </div>
+        <div id="app"></div>
+        <script type="module" src="/src/main.ts"></script>
     </body>
 </html>
