--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -6,11 +6,11 @@
         <meta name="description" content="L'autre terre libérée, une histoire anarchiste luynoise autour de Louis Rimbault" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png" />
-        <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png" />
-        <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png" />
-        <link rel="manifest" href="favicons/site.webmanifest" />
-        <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#5bbad5" />
+        <link rel="apple-touch-icon" sizes="180x180" href="/public/favicons/apple-touch-icon.png" />
+        <link rel="icon" type="image/png" sizes="32x32" href="/public/favicons/favicon-32x32.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="/public/favicons/favicon-16x16.png" />
+        <link rel="manifest" href="/public/favicons/site.webmanifest" />
+        <link rel="mask-icon" href="/public/favicons/safari-pinned-tab.svg" color="#5bbad5" />
         <meta name="msapplication-TileColor" content="#da532c" />
         <meta name="theme-color" content="#ffffff" />
 
@@ -18,9 +18,9 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet" />
 
-        <link rel="stylesheet" href="css/normalize.css" />
-        <link rel="stylesheet" href="fonts/frankie/stylesheet.css" />
-        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="/public/css/normalize.css" />
+        <link rel="stylesheet" href="/public/fonts/frankie/stylesheet.css" />
+        <link rel="stylesheet" href="/public/css/style.css" />
 
         <link rel="manifest" href="site.webmanifest" />
         <meta name="theme-color" content="#fafafa" />
@@ -29,7 +29,7 @@
     <body>
         <div class="container">
             <div class="img-header text-center">
-                <img src="images/rimbault-transparent.png" />
+                <img src="/public/images/rimbault-transparent.png" />
             </div>
             <h1 class="text-center">Mentions légales</h1>
 
@@ -55,10 +55,10 @@
                 </div>
             </div>
             <div class="footer text-center">
-                <img src="images/logo-small.png" />
+                <img src="/public/images/logo-small.png" />
             </div>
             <div class="liens">
-                <a href="index.html">Accueil</a>
+                <a href="/index.html">Accueil</a>
             </div>
         </div>
     </body>
