--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
         <meta name="description" content="L'autre terre libérée, une histoire anarchiste luynoise autour de la figure de Louis Rimbault." />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <link rel="apple-touch-icon" sizes="180x180" href="/public/favicons/apple-touch-icon.png" />
-        <link rel="icon" type="image/png" sizes="32x32" href="/public/favicons/favicon-32x32.png" />
-        <link rel="icon" type="image/png" sizes="16x16" href="/public/favicons/favicon-16x16.png" />
-        <link rel="manifest" href="/public/favicons/site.webmanifest" />
-        <link rel="mask-icon" href="/public/favicons/safari-pinned-tab.svg" color="#5bbad5" />
+        <link rel="apple-touch-icon" sizes="180x180" href="src/favicons/apple-touch-icon.png" />
+        <link rel="icon" type="image/png" sizes="32x32" href="src/favicons/favicon-32x32.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="src/favicons/favicon-16x16.png" />
+        <link rel="manifest" href="src/favicons/site.webmanifest" />
+        <link rel="mask-icon" href="src/favicons/safari-pinned-tab.svg" color="#5bbad5" />
         <meta name="msapplication-TileColor" content="#da532c" />
         <meta name="theme-color" content="#ffffff" />
 
@@ -19,10 +19,10 @@
         <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
 
-        <link rel="stylesheet" href="/public/css/normalize.css" />
-        <link rel="stylesheet" href="/public/frankie/stylesheet.css" />
+        <link rel="stylesheet" href="src/css/normalize.css" />
+        <link rel="stylesheet" href="src/frankie/stylesheet.css" />
 
-        <link rel="manifest" href="/public/favicons/site.webmanifest" />
+        <link rel="manifest" href="/favicons/site.webmanifest" />
         <meta name="theme-color" content="#fafafa" />
     </head>
     <body>
