--- a/src/app.html
+++ b/src/app.html
@@ -1,43 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<title>L'autre terre libérée</title>
-		<meta
-			name="description"
-			content="L'autre terre libérée, une histoire anarchiste luynoise autour de la figure de Louis Rimbault."
-		/>
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+    <head>
+        <meta charset="utf-8" />
+        <title>L'autre terre libérée</title>
+        <meta name="description" content="L'autre terre libérée, une histoire anarchiste luynoise autour de la figure de Louis Rimbault." />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-		<link rel="apple-touch-icon" sizes="180x180" href="/src/lib/favicons/apple-touch-icon.png" />
-		<link rel="icon" type="image/png" sizes="32x32" href="/src/lib/favicons/favicon-32x32.png" />
-		<link rel="icon" type="image/png" sizes="16x16" href="/src/lib/favicons/favicon-16x16.png" />
-		<link rel="manifest" href="/src/lib/favicons/site.webmanifest" />
-		<link rel="mask-icon" href="/src/lib/favicons/safari-pinned-tab.svg" color="#5bbad5" />
-		<meta name="msapplication-TileColor" content="#da532c" />
-		<meta name="theme-color" content="#ffffff" />
+        <link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/favicons/apple-touch-icon.png" />
+        <link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/favicons/favicon-32x32.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/favicons/favicon-16x16.png" />
+        <link rel="manifest" href="%sveltekit.assets%/favicons/site.webmanifest" />
+        <link rel="mask-icon" href="%sveltekit.assets%/favicons/safari-pinned-tab.svg" color="#5bbad5" />
+        <meta name="msapplication-TileColor" content="#da532c" />
+        <meta name="theme-color" content="#ffffff" />
 
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap"
-			rel="stylesheet"
-		/>
-		<link
-			href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
-			rel="stylesheet"
-		/>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
 
-		<link rel="stylesheet" href="/src/lib/css/normalize.css" />
-		<link rel="stylesheet" href="/src/lib/frankie/stylesheet.css" />
-		<link rel="stylesheet" href="/src/lib/css/style.css" />
+        <link rel="stylesheet" href="%sveltekit.assets%/css/normalize.css" />
+        <link rel="stylesheet" href="%sveltekit.assets%/frankie/stylesheet.css" />
+        <link rel="stylesheet" href="%sveltekit.assets%/css/style.css" />
 
-		<link rel="manifest" href="/src/lib/favicons/site.webmanifest" />
-		<meta name="theme-color" content="#fafafa" />
+        <link rel="manifest" href="%sveltekit.assets%/favicons/site.webmanifest" />
+        <meta name="theme-color" content="#fafafa" />
 
-		%sveltekit.head%
-	</head>
-	<body>
-		%sveltekit.body%
-	</body>
+        %sveltekit.head%
+    </head>
+    <body>
+        %sveltekit.body%
+    </body>
 </html>
