--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-MYHJ7N5MJ9"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag("js", new Date());
+            gtag("config", "G-MYHJ7N5MJ9");
+        </script>
+
         <meta charset="utf-8" />
         <title>L'autre terre libérée</title>
         <meta name="description" content="L'autre terre libérée, une histoire anarchiste luynoise autour de la figure de Louis Rimbault." />
