--- a/src/app.html
+++ b/src/app.html
@@ -2,14 +2,14 @@
 <html lang="en">
     <head>
         <!-- Google tag (gtag.js) -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-MYHJ7N5MJ9"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-TE2G0SWJP7"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag() {
                 dataLayer.push(arguments);
             }
             gtag("js", new Date());
-            gtag("config", "G-MYHJ7N5MJ9");
+            gtag("config", "G-TE2G0SWJP7");
         </script>
 
         <meta charset="utf-8" />
