--- a/src/app.html
+++ b/src/app.html
@@ -14,6 +14,8 @@
         gtag("config", "G-TE2G0SWJP7");
     </script>
 
+    <script defer data-domain="lautreterreliberee.fr" src="https://plausible.io/js/script.js"></script>
+
     <meta charset="utf-8"/>
     <title>L'autre terre libérée</title>
     <meta name="description" content="L'autre terre libérée, une histoire anarchiste luynoise autour de la figure de Louis Rimbault."/>
